WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273611
The RenderView layer shouldn't need to set shouldRasterize for backdrop filters
https://bugs.webkit.org/show_bug.cgi?id=273611
Summary
The RenderView layer shouldn't need to set shouldRasterize for backdrop filters
Matt Woodrow
Reported
2024-05-02 01:26:36 PDT
<
rdar://127364620
> Doing so uses more memory, and shouldn't be needed if the RenderView is opaque.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-05-02 01:28:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28039
EWS
Comment 2
2024-05-06 01:41:02 PDT
Committed
278397@main
(26c33a981702): <
https://commits.webkit.org/278397@main
> Reviewed commits have been landed. Closing PR #28039 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug