The RenderView layer shouldn't need to set shouldRasterize for backdrop filters. https://bugs.webkit.org/show_bug.cgi?id=273611 <rdar://127364620>

Reviewed by Simon Fraser.

Doing so uses more memory, and shouldn't be needed if the RenderView is opaque.

Skip making the RenderView a backdrop root for the GraphicsLayers if its opaque.
Make sure any backdrop filters that will capture up to the root can still use the
opaque blur settings.

* LayoutTests/css3/filters/backdrop/resource-use-add-more-layers-expected.txt:
* LayoutTests/css3/filters/backdrop/resource-use-excessive-expected.txt:
* LayoutTests/css3/filters/backdrop/resource-use-ok-expected.txt:
* LayoutTests/platform/glib/css3/filters/backdrop/resource-use-add-more-layers-expected.txt:
* LayoutTests/platform/glib/css3/filters/backdrop/resource-use-excessive-expected.txt:
* LayoutTests/platform/glib/css3/filters/backdrop/resource-use-ok-expected.txt:
* LayoutTests/platform/mac-wk1/css3/filters/backdrop/resource-use-add-more-layers-expected.txt: Copied from LayoutTests/css3/filters/backdrop/resource-use-add-more-layers-expected.txt.
* LayoutTests/platform/mac-wk1/css3/filters/backdrop/resource-use-excessive-expected.txt: Copied from LayoutTests/css3/filters/backdrop/resource-use-excessive-expected.txt.
* LayoutTests/platform/mac-wk1/css3/filters/backdrop/resource-use-ok-expected.txt: Copied from LayoutTests/css3/filters/backdrop/resource-use-ok-expected.txt.
* Source/WebCore/platform/graphics/GraphicsLayer.cpp:
(WebCore::GraphicsLayer::dumpProperties const):
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::flushCompositingState):
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateBackdropRoot):

Canonical link: https://commits.webkit.org/278397@main